--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -74,9 +74,8 @@
 
 /* ++++++++++ Start of Hero Component style sheet ++++++++++ */
 .hero-container {
-  width: 100%;
-  height: 100vh;
-  padding: 0 8rem;
+ 
+  padding: 4rem 8rem;
 
   background: linear-gradient(
     360deg,
@@ -87,18 +86,18 @@
     h1 {
       @include yoga;
       font-weight: 300;
-      font-size: 18rem;
+      font-size: 14rem;
       color: rgba(29, 28, 26, 0.805);
-      position: absolute;
-      left: 15rem;
-      top: 8rem;
+     position: absolute;
+      left: 8rem;
+      top: 8rem; 
       z-index: 2;
     }
     h2 {
       @include logo-font-style;
       font-family: "MoonDance-Regular";
-      font-size: 4.5rem;
-      top: 28rem;
+      font-size: 6rem;
+      top: 22rem;
       left: 18rem;
       position: absolute;
     }
@@ -110,16 +109,15 @@
     border-radius: 50%;
     border: #e4e4e48d 2rem solid;
     position: relative;
-    left: 50rem;
-    top: 6rem;
-
+    left:35rem;    
+/* 
     .gif {
       width: 110rem;
       height: 70rem;
       position: absolute;
-      right: -22rem;
+      right: rem;
       bottom: -5rem;
-    }
+    } */
   }
 }
 
