--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -723,3 +723,4 @@ we need to adujust this media query to the above breakpoints
     /*----- Start of Footer component media query----- */
   }
 }
+}
