aligned Feedback heading

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -369,6 +369,7 @@
       @include heading-2-style;
       display: flex;
       justify-content: center;
+      padding-bottom: 7rem;
     }
 
     .article-container {
